# isospin

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  alias.json  header.css  header.css.map  header.html  header.js  header.sass  index.html  package-lock.json  package.json  patterns.txt  startup.js  styles.css  svelte.config.js  tailwind.config.js  update_afire-2.0.0.diff  vite.config.ts
media/article/: test.md
media/articles/: test.md  test2.md
media/project_desc/: isospin.md
src/: app.html  config.rs  file.rs  main.rs  setup.rs  sh.rs  sql.rs  styles.css  template.rs  watch.ts
src/components/: Terminal.svelte
src/filesystem/: filesys.ts  index.ts
src/icon/: Icon.svelte  icon-sheet.aseprite  index.ts
src/icons/: Cross.svelte  icon-sheet.aseprite  index.ts
src/lib/: drag.ts  util.ts  utils.ts
src/markdown/: projects.md
src/routes/: +layout.svelte  +page.svelte  Desktop.svelte  FloppaOS.svelte  OsScreen.svelte  Startup.svelte  Terminal.svelte  Timeout.svelte  Wallpaper.svelte  article.rs  blog.rs  header.rs  home.rs  html.rs  lines.ts  md.rs  mod.rs  root.rs  styles.css  styles.postcss  terminal.ts
styles/: styles.css  styles.css.map
web/: header.css  header.css.map  header.html  header.js  header.sass  package-lock.json  patterns.txt
web/scss/: config.scss  header.scss  project.scss  styles.scss  text.scss  variables.scss
web/static/: crt.css  gruvbox-color.css  header.css  header.css.map  header.html  header.js  header.scss  index.js  styles.css  styles.css.map  styles.scss  text.css  text.css.map  text.scss
(+52 files in other folders)
