[package]
name = "isospin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ur welcome conor
afire = {version = "1.2.0", features = ["extensions", "tracing"] }
# # very slow image processing i could have done in python but oh well
# image = "0.24.4"
# imageproc = "0.23.0"

rand = "0.8.5"
lazy_static = "1.4.0"
comrak = "0.14"
anyhow = "1.0"