[package]
name = "isospin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ur welcome conor
afire = {version = "1.2.0", features = ["extensions", "tracing"] }
# # very slow image processing i could have done in python but oh well
# image = "0.24.4"
# imageproc = "0.23.0"

# lol xd im so random
rand = "0.8.5"
# mandatory
lazy_static = "1.4.0"
# markdown processing
comrak = "0.14"
# good error handling
anyhow = "1.0"
# time
chrono = "0.4.22"
# pretty printing
crossterm = "0.25.0"
# i *need* to know how many views my articles get its very important for me and for my ego and for you and for me
sqlite = "0.28.1"